products/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: products
  labels:
    app: products
spec:
  selector:
    app: products
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
