products/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: products
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: auth.REPLACE_DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: products
                port:
                  number: 80
